--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,14 +10,14 @@
                     <td>Durée totale réelle des appels effectués après le 15/02/2012: <strong>{{ totalDurationReal[0].realDuration }}</strong></td>
                 </tr>
             {% endif %}
-            {% if numberOfSms is not empty %}
+            {% if numberOfSms is defined and numberOfSms is not empty %}
                 <tr>
                     <td>Quantité totale de SMS : <strong>{{ numberOfSms[0].smsCount }}</strong></td>
                 </tr>
             {% endif %}
         </table>
 
-        {% if topTen|length > 0 %}
+        {% if topTen is defined and topTen|length > 0 %}
             <h2>Top 10</h2>
             <table border="1">
                 <thead>
@@ -63,7 +63,7 @@
     a { color: #0000F0; }
     a:hover { text-decoration: none; }
     code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-    #wrapper { background: #FFF; margin: 1em auto; max-width: 1100px; width: 95%; }
+    #wrapper { background: #FFF; margin: 1em auto; max-width: 1100px; width: 95%; overflow: hidden; }
     #container { padding: 2em; }
     #welcome, #status { margin-bottom: 2em; }
     #welcome h1 span { display: block; font-size: 75%; }
@@ -81,11 +81,11 @@
     }
 
     .loadFile {
-        float: right;
         display: block;
         padding: 11px;
         background: #f0f0f0;
-        margin: 9px;
+        margin: 8px;
+        width: 150px;
     }
 </style>
 {% endblock %}
